grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: hass
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Dashboards
    gethomepage.dev/group: Home Automation
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana
    gethomepage.dev/widget.type: grafana
    gethomepage.dev/widget.url: https://mydomain.com
spec:
  ingressClassName: traefik
  rules:
    - host: https://mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - secretName: tls-certificate
      hosts:
        - https://mydomain.com
